Update APK download link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>♟ Chess App for Android</h1>
     <p>Free offline chess game for two players with a simple UI.</p>
 
-    <a class="btn" href="chess.apk">⬇ Download APK</a>
+    <a class="btn" href="https://github.com/vyomsinghsisodiya/vyomsinghsisodiya.github.io/releases/download/v1.0/chess-mobile-app-v1_0_1.apk">⬇ Download APK</a>
 
     <h2>Features</h2>
     <ul>
