--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="box">
-    <h1>♟ Chess App for Android</h1>
+    <h1>♟ Chess App for Android!</h1>
     <p>Free offline chess game for two players with a simple UI.</p>
 
     <a class="btn" href="https://github.com/vyomsinghsisodiya/vyomsinghsisodiya.github.io/releases/download/v1.0/chess-mobile-app-v1_0_1.apk">⬇ Download APK</a>
