--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li>Simple & clean UI</li>
     </ul>
 
-    <p>Contact: yourmail@gmail.com</p>
+    <p>Contact:vyomsingh7742@gmail.com</p>
   </div>
 </body>
 </html>
