--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Chess App – Free Android Game</title>
   <meta name="description" content="Free offline chess app for Android. Two player chess game.">
+  <meta name="keywords" content="vyom chess, vyomchess, chess android app, offline chess game, vyom chess app">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial; background:#f5f5f5; margin:0; }
