--- a/index.html
+++ b/index.html
@@ -1,31 +1,125 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Chess App – Free Android Game</title>
-  <meta name="description" content="Free offline chess app for Android. Two player chess game.">
-  <meta name="keywords" content="vyom chess, vyomchess, chess android app, offline chess game, vyom chess app">
+  <meta charset="UTF-8">
+
+  <title>Vyom Chess – Free Offline Chess App for Android</title>
+
+  <meta name="description" content="Vyom Chess is a free offline chess app for Android. Play two-player chess with a clean and simple UI.">
+  <meta name="keywords" content="vyom chess, vyomchess, chess android app, offline chess game, two player chess, vyom chess app">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    body { font-family: Arial; background:#f5f5f5; margin:0; }
-    .box { max-width:800px; margin:auto; background:white; padding:20px; }
-    .btn { background:#2c7be5; color:white; padding:12px 16px; text-decoration:none; border-radius:6px; display:inline-block; }
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Roboto, Arial, sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #333;
+    }
+
+    .container {
+      max-width: 460px;
+      margin: 90px auto;
+      background: #ffffff;
+      padding: 35px 30px;
+      border-radius: 16px;
+      box-shadow: 0 20px 45px rgba(0, 0, 0, 0.25);
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 28px;
+      color: #111;
+    }
+
+    .tagline {
+      font-size: 15px;
+      color: #666;
+      margin: 12px 0 25px;
+      line-height: 1.6;
+    }
+
+    .download-btn {
+      display: inline-block;
+      background: linear-gradient(90deg, #43cea2, #185a9d);
+      color: #fff;
+      padding: 14px 26px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 15px;
+      font-weight: 600;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .download-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.25);
+    }
+
+    .section-title {
+      margin-top: 30px;
+      font-size: 18px;
+      color: #222;
+    }
+
+    ul {
+      text-align: left;
+      margin: 15px 0 0;
+      padding-left: 22px;
+      color: #444;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    footer {
+      margin-top: 35px;
+      padding-top: 18px;
+      border-top: 1px solid #eee;
+      font-size: 13px;
+      color: #777;
+    }
+
+    footer span {
+      display: block;
+      margin-top: 6px;
+      color: #444;
+      font-weight: 500;
+    }
   </style>
 </head>
+
 <body>
-  <div class="box">
-    <h1>♟ Chess App for Android!</h1>
-    <p>Free offline chess game for two players with a simple UI.</p>
+  <div class="container">
+    <h1>♟️ Vyom Chess</h1>
 
-    <a class="btn" href="https://github.com/vyomsinghsisodiya/vyomsinghsisodiya.github.io/releases/download/v1.0/chess-mobile-app-v1_0_1.apk">⬇ Download APK</a>
+    <div class="tagline">
+      Free offline chess app for Android<br>
+      Two-player mode • Simple & clean UI
+    </div>
 
-    <h2>Features</h2>
+    <a
+      class="download-btn"
+      href="https://github.com/vyomsinghsisodiya/vyomsinghsisodiya.github.io/releases/download/v1.0/chess-mobile-app-v1_0_1.apk"
+    >
+      ⬇ Download APK
+    </a>
+
+    <div class="section-title">Features</div>
     <ul>
-      <li>Offline play</li>
-      <li>Two-player mode</li>
-      <li>Simple & clean UI</li>
+      <li>Play chess offline</li>
+      <li>Two-player local mode</li>
+      <li>Lightweight & fast</li>
+      <li>No ads, clean interface</li>
     </ul>
 
-    <p>Contact:vyomsingh7742@gmail.com</p>
+    <footer>
+      Contact: vyomsingh7742@gmail.com
+      <span>Created by Vyom Singh Sisodiya</span>
+      <span>© 2026 Vyom Chess</span>
+    </footer>
   </div>
 </body>
 </html>
